$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------

- Fix changes to the 'Use device polling' state now fire up a 'reboot required' event as expected.
  Fix changes to the 'Prefer old IPsec SAs' state now trigger an ipsec function call as expected.

- Fix disconnecting sessions on captive portal status page.
  Keep csrf-secret.php from appearing on group manager.

- Generate 2048-bit SSL certificates by default and make them valid for 3 instead of 2 years.

- Replace expired default certificate/key by new one.

- Eliminate modifying GETs from services_croen.php

- Update supfile to include ports-base to update Mk or new ports won't build

- Disable usbus interfaces (to avoid SNMP ifindex shift).

- Add WLAN TX power setting (static list, since querying the supported
  power settings doesn't appear to be reliable).

- Eliminate modifying GETs from webGUI pages (except for services_croen*.php)
  
  Note: the API pages exec_raw.php and uploadconfig.php now require
  different parameters than before. exec_raw.php now requires the cmd to
  be given in a POST, and both pages need a valid CSRF magic token,
  which can be obtained by issuing a GET first without any parameters
  (see example in exec_raw.php comment).

- Make rule moving and deletion on shaper rules page work like for firewall rules.

- Fix potential XSS in diag_ping.php and diag_traceroute.php.

- Add some new SCSI and network drivers to the kernel configs.

- Make rule moving and deletion on shaper rules page work like for firewall rules.

- Add csrf-magic for CSRF protection in webGUI. Note: all modifying GETs in
  webGUI still need to be replaced by POSTs for this to be effective.

- Fix ip address for modem on status page.

- Update build scripts and patches for FreeBSD 8.3 and bump version to 1.8.1
  to reflect this relatively major change.
