@@ -3,6 +3,8 @@ $Id$
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
 
+- Add enable/disable scheduler jobsets
+
 - Fix changes to the 'Use device polling' state now fire up a 'reboot required' event as expected.
   Fix changes to the 'Prefer old IPsec SAs' state now trigger an ipsec function call as expected.
 
